--- a/github/angular-aws-s3.yml
+++ b/github/angular-aws-s3.yml
@@ -30,7 +30,9 @@ jobs:
           node-version: 12
       - run: npm install
         working-directory: ./front-end/
-      - run: npm run build-prod
-        working-directory: ./front-end/
       - run: npm run lint
+        working-directory: ./front-end/
+      - run: npm run test
+        working-directory: ./front-end/
+      - run: npm run build-prod
         working-directory: ./front-end/
