--- a/github/angular-aws-s3.yml
+++ b/github/angular-aws-s3.yml
@@ -36,3 +36,15 @@ jobs:
         working-directory: ./front-end/
       - run: npm run build-prod
         working-directory: ./front-end/
+        
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: 'Deploy'
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-southeast-1
+      - run: aws s3 sync ./front-end/dist/front-end s3://<s3 bucket name>
