--- a/azure-devops/dotnet-core-nuget-publish-internal.yml
+++ b/azure-devops/dotnet-core-nuget-publish-internal.yml
@@ -28,7 +28,7 @@ steps:
     displayName: 'Pack'
     inputs:
       command: pack
-      packagesToPack: '**/*csproj'
+      packagesToPack: '**/*.csproj'
       versioningScheme: byBuildNumber
   
   - task: DotNetCoreCLI@2
